- Ensure that PRE blocks are fully expanded when printing instead of showing a scroll bar.
- Stop asking for OL and UL lists not being broken up by page breaks.
It causes way too much white space, given our list-heavy content.

--- a/_sass/base/_common.scss
+++ b/_sass/base/_common.scss
@@ -149,6 +149,10 @@ pre {
         display: block;
         padding: .5em;
     }
+
+    @media print {
+        max-height: unset;
+    }
 }
 
 div.highlight {
@@ -396,7 +400,7 @@ code {
         max-width: 100% !important;
     }
 
-    pre, blockquote, ul, ol, img {
+    pre, blockquote, img {
         page-break-inside: avoid;
     }
 }
